v8.0: (beta)
	allow multiple packages to modify the same file
		multiple patch files for each active file are permitted
	add TailscaleGX to default package list
	fixed: PackageManager hangs if there is no setup script in package directory

v7.15:
	fixed: GitHub version not refreshed when user/branch change
	fixed: old blind install

v7.14:
	fixed: incompatible message not cleared when package no longer incompatible

v7.13:
	fixed: PackageManager doesn't install packages after firmware update

v7.12:
	fixed: PackageManager hangs if there is no setup script in package directory

v7.11:
	fixed: conflicts not cleared when they have been resolved

v7.10:
	fixed: services with dash in the name do not install/uninstall

v7.9:
	added blind install .tgz files

v7.8:
	fixed: packages getting downloaded when not needed + PackageManger crash
		results in corrupted pacakges

v7.7:
	fixed: remove duplicates a package in Active packages

v7.6:
	fixed: Package editor menus shows Now / Later in stead of Proceed / Cancel
		for Show Details

v7.5:
	fixed: PackageManager restarts when removing package

v7.4:
	version bump -- HelperResources version was not updated in v7.3

v7.3:
	fixed: GitHub versions are not refreshed when reentering the Active Packages menu
	fixed: unrecognized command showDetails
	fixed: can't remove packages from Package editor menu
	improve reporting of restart/reboot requirements in GUI

v7.2:
	more fixes for install failure GUI lockups
	fixed: repeating "checking" messages (and the assocated calls to setup scripts)

v7.1:
	fixed: install failure locks up GUI
	check for and report patching errors
v7.0:
	fixed: Package editor menu sometimes locks up with Download, etc grayed out
	fixed: file set error uninstalls package without prompting for action
	fixed: running setup script from inside the package directory fails
		e.g., cd /data/GuiMods; ./setup
	add package dependencies, conflict detection and resolution