@@ -3,6 +3,7 @@ v8.0: (beta)
 		multiple patch files for each active file are permitted
 	add TailscaleGX to default package list
 	fixed: PackageManager hangs if there is no setup script in package directory
+	fixed: PackageManager hangs with package add
 
 v7.15:
 	fixed: GitHub version not refreshed when user/branch change
